Add vul route to asset controller
